// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BiosCard should not render hasReleaseDate 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="system-properties-card"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-6"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            BIOS
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
              data-ouia-component-id="Vendor title"
            >
              Vendor
            </dt>
            <dd
              class=""
              data-ouia-component-id="Vendor value"
            >
              test-vendor
            </dd>
            <dt
              class=""
              data-ouia-component-id="Version title"
            >
              Version
            </dt>
            <dd
              class=""
              data-ouia-component-id="Version value"
            >
              test-version
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`BiosCard should not render hasVendor 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="system-properties-card"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-4"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            BIOS
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
              data-ouia-component-id="Version title"
            >
              Version
            </dt>
            <dd
              class=""
              data-ouia-component-id="Version value"
            >
              test-version
            </dd>
            <dt
              class=""
              data-ouia-component-id="Release date title"
            >
              Release date
            </dt>
            <dd
              class=""
              data-ouia-component-id="Release date value"
            >
              01 Apr 2014
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`BiosCard should not render hasVersion 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="system-properties-card"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-5"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            BIOS
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
              data-ouia-component-id="Vendor title"
            >
              Vendor
            </dt>
            <dd
              class=""
              data-ouia-component-id="Vendor value"
            >
              test-vendor
            </dd>
            <dt
              class=""
              data-ouia-component-id="Release date title"
            >
              Release date
            </dt>
            <dd
              class=""
              data-ouia-component-id="Release date value"
            >
              01 Apr 2014
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`BiosCard should render correctly - no data 1`] = `
<MemoryRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "rd5r25",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "rd5r25",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Connect(BiosCardCore)
      detailLoaded={false}
      extra={Array []}
      handleClick={[Function]}
      hasReleaseDate={true}
      hasVendor={true}
      hasVersion={true}
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <BiosCardCore
        bios={
          Object {
            "releaseDate": undefined,
            "vendor": undefined,
            "version": undefined,
          }
        }
        detailLoaded={false}
        dispatch={[Function]}
        extra={Array []}
        handleClick={[Function]}
        hasReleaseDate={true}
        hasVendor={true}
        hasVersion={true}
        store={
          Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          }
        }
      >
        <LoadingCard
          isLoading={true}
          items={
            Array [
              Object {
                "title": "Vendor",
                "value": undefined,
              },
              Object {
                "title": "Version",
                "value": undefined,
              },
              Object {
                "title": "Release date",
                "value": "Not available",
              },
            ]
          }
          title="BIOS"
        >
          <Card
            ouiaId="system-properties-card"
          >
            <article
              className="pf-c-card"
              data-ouia-component-id="system-properties-card"
              data-ouia-component-type="PF4/Card"
              data-ouia-safe={true}
              id=""
            >
              <CardBody>
                <div
                  className="pf-c-card__body"
                >
                  <Stack
                    hasGutter={true}
                  >
                    <div
                      className="pf-l-stack pf-m-gutter"
                    >
                      <StackItem>
                        <div
                          className="pf-l-stack__item"
                        >
                          <TextContent>
                            <div
                              className="pf-c-content"
                            >
                              <Text
                                component="h1"
                              >
                                <h1
                                  className=""
                                  data-ouia-component-id="OUIA-Generated-Text-1"
                                  data-ouia-component-type="PF4/Text"
                                  data-ouia-safe={true}
                                  data-pf-content={true}
                                >
                                  BIOS
                                </h1>
                              </Text>
                            </div>
                          </TextContent>
                        </div>
                      </StackItem>
                      <StackItem
                        isFilled={true}
                      >
                        <div
                          className="pf-l-stack__item pf-m-fill"
                        >
                          <TextContent>
                            <div
                              className="pf-c-content"
                            >
                              <TextList
                                component="dl"
                              >
                                <dl
                                  className=""
                                >
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Vendor title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Vendor title"
                                    >
                                      Vendor
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Vendor value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Vendor value"
                                    >
                                      <Skeleton
                                        size="sm"
                                      >
                                        <Skeleton
                                          className="ins-c-skeleton ins-c-skeleton__sm"
                                        >
                                          <div
                                            className="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                                          >
                                            <span
                                              className="pf-u-screen-reader"
                                            />
                                          </div>
                                        </Skeleton>
                                      </Skeleton>
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Version title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Version title"
                                    >
                                      Version
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Version value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Version value"
                                    >
                                      <Skeleton
                                        size="sm"
                                      >
                                        <Skeleton
                                          className="ins-c-skeleton ins-c-skeleton__sm"
                                        >
                                          <div
                                            className="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                                          >
                                            <span
                                              className="pf-u-screen-reader"
                                            />
                                          </div>
                                        </Skeleton>
                                      </Skeleton>
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Release date title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Release date title"
                                    >
                                      Release date
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Release date value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Release date value"
                                    >
                                      <Skeleton
                                        size="sm"
                                      >
                                        <Skeleton
                                          className="ins-c-skeleton ins-c-skeleton__sm"
                                        >
                                          <div
                                            className="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                                          >
                                            <span
                                              className="pf-u-screen-reader"
                                            />
                                          </div>
                                        </Skeleton>
                                      </Skeleton>
                                    </dd>
                                  </TextListItem>
                                </dl>
                              </TextList>
                            </div>
                          </TextContent>
                        </div>
                      </StackItem>
                    </div>
                  </Stack>
                </div>
              </CardBody>
            </article>
          </Card>
        </LoadingCard>
      </BiosCardCore>
    </Connect(BiosCardCore)>
  </Router>
</MemoryRouter>
`;

exports[`BiosCard should render correctly with data - wrong date 1`] = `
<MemoryRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "zfkset",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "zfkset",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Connect(BiosCardCore)
      detailLoaded={false}
      extra={Array []}
      handleClick={[Function]}
      hasReleaseDate={true}
      hasVendor={true}
      hasVersion={true}
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <BiosCardCore
        bios={
          Object {
            "releaseDate": "test",
            "vendor": "test-vendor",
            "version": "test-version",
          }
        }
        detailLoaded={true}
        dispatch={[Function]}
        extra={Array []}
        handleClick={[Function]}
        hasReleaseDate={true}
        hasVendor={true}
        hasVersion={true}
        store={
          Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          }
        }
      >
        <LoadingCard
          isLoading={false}
          items={
            Array [
              Object {
                "title": "Vendor",
                "value": "test-vendor",
              },
              Object {
                "title": "Version",
                "value": "test-version",
              },
              Object {
                "title": "Release date",
                "value": "Not available",
              },
            ]
          }
          title="BIOS"
        >
          <Card
            ouiaId="system-properties-card"
          >
            <article
              className="pf-c-card"
              data-ouia-component-id="system-properties-card"
              data-ouia-component-type="PF4/Card"
              data-ouia-safe={true}
              id=""
            >
              <CardBody>
                <div
                  className="pf-c-card__body"
                >
                  <Stack
                    hasGutter={true}
                  >
                    <div
                      className="pf-l-stack pf-m-gutter"
                    >
                      <StackItem>
                        <div
                          className="pf-l-stack__item"
                        >
                          <TextContent>
                            <div
                              className="pf-c-content"
                            >
                              <Text
                                component="h1"
                              >
                                <h1
                                  className=""
                                  data-ouia-component-id="OUIA-Generated-Text-3"
                                  data-ouia-component-type="PF4/Text"
                                  data-ouia-safe={true}
                                  data-pf-content={true}
                                >
                                  BIOS
                                </h1>
                              </Text>
                            </div>
                          </TextContent>
                        </div>
                      </StackItem>
                      <StackItem
                        isFilled={true}
                      >
                        <div
                          className="pf-l-stack__item pf-m-fill"
                        >
                          <TextContent>
                            <div
                              className="pf-c-content"
                            >
                              <TextList
                                component="dl"
                              >
                                <dl
                                  className=""
                                >
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Vendor title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Vendor title"
                                    >
                                      Vendor
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Vendor value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Vendor value"
                                    >
                                      test-vendor
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Version title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Version title"
                                    >
                                      Version
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Version value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Version value"
                                    >
                                      test-version
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Release date title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Release date title"
                                    >
                                      Release date
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Release date value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Release date value"
                                    >
                                      Not available
                                    </dd>
                                  </TextListItem>
                                </dl>
                              </TextList>
                            </div>
                          </TextContent>
                        </div>
                      </StackItem>
                    </div>
                  </Stack>
                </div>
              </CardBody>
            </article>
          </Card>
        </LoadingCard>
      </BiosCardCore>
    </Connect(BiosCardCore)>
  </Router>
</MemoryRouter>
`;

exports[`BiosCard should render correctly with data 1`] = `
<MemoryRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "en989y",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "en989y",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Connect(BiosCardCore)
      detailLoaded={false}
      extra={Array []}
      handleClick={[Function]}
      hasReleaseDate={true}
      hasVendor={true}
      hasVersion={true}
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <BiosCardCore
        bios={
          Object {
            "releaseDate": "04/01/2014",
            "vendor": "test-vendor",
            "version": "test-version",
          }
        }
        detailLoaded={true}
        dispatch={[Function]}
        extra={Array []}
        handleClick={[Function]}
        hasReleaseDate={true}
        hasVendor={true}
        hasVersion={true}
        store={
          Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          }
        }
      >
        <LoadingCard
          isLoading={false}
          items={
            Array [
              Object {
                "title": "Vendor",
                "value": "test-vendor",
              },
              Object {
                "title": "Version",
                "value": "test-version",
              },
              Object {
                "title": "Release date",
                "value": <DateFormat
                  date={2014-04-01T00:00:00.000Z}
                  type="onlyDate"
                />,
              },
            ]
          }
          title="BIOS"
        >
          <Card
            ouiaId="system-properties-card"
          >
            <article
              className="pf-c-card"
              data-ouia-component-id="system-properties-card"
              data-ouia-component-type="PF4/Card"
              data-ouia-safe={true}
              id=""
            >
              <CardBody>
                <div
                  className="pf-c-card__body"
                >
                  <Stack
                    hasGutter={true}
                  >
                    <div
                      className="pf-l-stack pf-m-gutter"
                    >
                      <StackItem>
                        <div
                          className="pf-l-stack__item"
                        >
                          <TextContent>
                            <div
                              className="pf-c-content"
                            >
                              <Text
                                component="h1"
                              >
                                <h1
                                  className=""
                                  data-ouia-component-id="OUIA-Generated-Text-2"
                                  data-ouia-component-type="PF4/Text"
                                  data-ouia-safe={true}
                                  data-pf-content={true}
                                >
                                  BIOS
                                </h1>
                              </Text>
                            </div>
                          </TextContent>
                        </div>
                      </StackItem>
                      <StackItem
                        isFilled={true}
                      >
                        <div
                          className="pf-l-stack__item pf-m-fill"
                        >
                          <TextContent>
                            <div
                              className="pf-c-content"
                            >
                              <TextList
                                component="dl"
                              >
                                <dl
                                  className=""
                                >
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Vendor title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Vendor title"
                                    >
                                      Vendor
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Vendor value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Vendor value"
                                    >
                                      test-vendor
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Version title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Version title"
                                    >
                                      Version
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Version value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Version value"
                                    >
                                      test-version
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Release date title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Release date title"
                                    >
                                      Release date
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Release date value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Release date value"
                                    >
                                      <DateFormat
                                        date={2014-04-01T00:00:00.000Z}
                                        type="onlyDate"
                                      >
                                        01 Apr 2014
                                      </DateFormat>
                                    </dd>
                                  </TextListItem>
                                </dl>
                              </TextList>
                            </div>
                          </TextContent>
                        </div>
                      </StackItem>
                    </div>
                  </Stack>
                </div>
              </CardBody>
            </article>
          </Card>
        </LoadingCard>
      </BiosCardCore>
    </Connect(BiosCardCore)>
  </Router>
</MemoryRouter>
`;

exports[`BiosCard should render extra 1`] = `
<MemoryRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "3qv5fz",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "3qv5fz",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Connect(BiosCardCore)
      detailLoaded={false}
      extra={
        Array [
          Object {
            "title": "something",
            "value": "test",
          },
          Object {
            "onClick": [Function],
            "title": "with click",
            "value": "1 tests",
          },
        ]
      }
      handleClick={[Function]}
      hasReleaseDate={true}
      hasVendor={true}
      hasVersion={true}
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <BiosCardCore
        bios={
          Object {
            "releaseDate": "04/01/2014",
            "vendor": "test-vendor",
            "version": "test-version",
          }
        }
        detailLoaded={true}
        dispatch={[Function]}
        extra={
          Array [
            Object {
              "title": "something",
              "value": "test",
            },
            Object {
              "onClick": [Function],
              "title": "with click",
              "value": "1 tests",
            },
          ]
        }
        handleClick={[Function]}
        hasReleaseDate={true}
        hasVendor={true}
        hasVersion={true}
        store={
          Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          }
        }
      >
        <LoadingCard
          isLoading={false}
          items={
            Array [
              Object {
                "title": "Vendor",
                "value": "test-vendor",
              },
              Object {
                "title": "Version",
                "value": "test-version",
              },
              Object {
                "title": "Release date",
                "value": <DateFormat
                  date={2014-04-01T00:00:00.000Z}
                  type="onlyDate"
                />,
              },
              Object {
                "title": "something",
                "value": "test",
              },
              Object {
                "onClick": [Function],
                "title": "with click",
                "value": "1 tests",
              },
            ]
          }
          title="BIOS"
        >
          <Card
            ouiaId="system-properties-card"
          >
            <article
              className="pf-c-card"
              data-ouia-component-id="system-properties-card"
              data-ouia-component-type="PF4/Card"
              data-ouia-safe={true}
              id=""
            >
              <CardBody>
                <div
                  className="pf-c-card__body"
                >
                  <Stack
                    hasGutter={true}
                  >
                    <div
                      className="pf-l-stack pf-m-gutter"
                    >
                      <StackItem>
                        <div
                          className="pf-l-stack__item"
                        >
                          <TextContent>
                            <div
                              className="pf-c-content"
                            >
                              <Text
                                component="h1"
                              >
                                <h1
                                  className=""
                                  data-ouia-component-id="OUIA-Generated-Text-7"
                                  data-ouia-component-type="PF4/Text"
                                  data-ouia-safe={true}
                                  data-pf-content={true}
                                >
                                  BIOS
                                </h1>
                              </Text>
                            </div>
                          </TextContent>
                        </div>
                      </StackItem>
                      <StackItem
                        isFilled={true}
                      >
                        <div
                          className="pf-l-stack__item pf-m-fill"
                        >
                          <TextContent>
                            <div
                              className="pf-c-content"
                            >
                              <TextList
                                component="dl"
                              >
                                <dl
                                  className=""
                                >
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Vendor title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Vendor title"
                                    >
                                      Vendor
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Vendor value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Vendor value"
                                    >
                                      test-vendor
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Version title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Version title"
                                    >
                                      Version
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Version value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Version value"
                                    >
                                      test-version
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Release date title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Release date title"
                                    >
                                      Release date
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Release date value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Release date value"
                                    >
                                      <DateFormat
                                        date={2014-04-01T00:00:00.000Z}
                                        type="onlyDate"
                                      >
                                        01 Apr 2014
                                      </DateFormat>
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="something title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="something title"
                                    >
                                      something
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="something value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="something value"
                                    >
                                      test
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="with click title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="with click title"
                                    >
                                      with click
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="with click value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="with click value"
                                    >
                                      <div>
                                        <Clickable
                                          onClick={[Function]}
                                          value="1 tests"
                                        >
                                          <Link
                                            to="./undefined"
                                          >
                                            <LinkAnchor
                                              href="/undefined"
                                              navigate={[Function]}
                                            >
                                              <a
                                                href="/undefined"
                                                onClick={[Function]}
                                              >
                                                1 tests
                                              </a>
                                            </LinkAnchor>
                                          </Link>
                                        </Clickable>
                                      </div>
                                    </dd>
                                  </TextListItem>
                                </dl>
                              </TextList>
                            </div>
                          </TextContent>
                        </div>
                      </StackItem>
                    </div>
                  </Stack>
                </div>
              </CardBody>
            </article>
          </Card>
        </LoadingCard>
      </BiosCardCore>
    </Connect(BiosCardCore)>
  </Router>
</MemoryRouter>
`;
